--- a/package.json
+++ b/package.json
@@ -5,38 +5,44 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --debug",
-    "build": "electron-builder",
+    "dev": "concurrently \"webpack --watch\" \"electron .\"",
+    "build": "webpack --mode production && electron-builder",
     "test": "jest"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "electron": "^28.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
-    "styled-components": "^6.1.8",
-    "framer-motion": "^11.0.3",
+    "electron-is-dev": "^2.0.0",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
-    "react-icons": "^5.0.1",
-    "react-tabs": "^6.0.2",
-    "react-syntax-highlighter": "^15.5.0",
-    "openai": "^4.28.0",
+    "framer-motion": "^11.0.3",
     "node-vad": "^1.1.4",
-    "electron-is-dev": "^2.0.0"
+    "openai": "^4.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-tabs": "^6.0.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "electron-builder": "^24.9.1",
     "@babel/core": "^7.23.9",
-    "@babel/preset-react": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.9",
     "babel-loader": "^9.1.3",
+    "babel-plugin-styled-components": "^2.1.4",
+    "concurrently": "^8.2.2",
+    "css-loader": "^6.10.0",
+    "electron-builder": "^24.9.1",
+    "electron-reload": "^2.0.0-alpha.1",
+    "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
-    "jest": "^29.7.0",
-    "electron-reload": "^2.0.0-alpha.1"
+    "webpack-dev-server": "^5.2.2"
   },
   "build": {
     "appId": "com.aether.browser",
@@ -71,4 +77,4 @@
       "icon": "assets/icon.png"
     }
   }
-} 
+}
