--- a/package.json
+++ b/package.json
@@ -1,48 +1,41 @@
 {
   "name": "aether-browser",
   "version": "1.0.0",
-  "description": "Um navegador moderno e elegante com foco em privacidade e experiência imersiva",
+  "description": "Um navegador moderno e elegante",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "concurrently \"webpack --watch\" \"electron .\"",
+    "dev": "concurrently \"webpack serve --mode development\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "webpack --mode production && electron-builder",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "electron": "^28.1.0",
     "electron-is-dev": "^2.0.0",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.7",
-    "framer-motion": "^11.0.3",
-    "node-vad": "^1.1.4",
-    "openai": "^4.28.0",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-tabs": "^6.0.2",
-    "styled-components": "^6.1.8"
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.15.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.9",
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
-    "babel-plugin-styled-components": "^2.1.4",
-    "concurrently": "^8.2.2",
-    "css-loader": "^6.10.0",
-    "electron-builder": "^24.9.1",
-    "electron-reload": "^2.0.0-alpha.1",
-    "html-webpack-plugin": "^5.6.3",
-    "jest": "^29.7.0",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.90.1",
+    "babel-plugin-styled-components": "^2.1.1",
+    "concurrently": "^8.2.1",
+    "css-loader": "^6.8.1",
+    "electron": "^25.6.0",
+    "electron-builder": "^24.6.4",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "wait-on": "^7.0.1",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "build": {
     "appId": "com.aether.browser",
